--- a/src/components/Aside/aside.module.css
+++ b/src/components/Aside/aside.module.css
@@ -1,5 +1,6 @@
 .aside {
   border-radius: 8px;
-  background-color: #171D1F;
+  background-color: #171d1f;
   padding: 40px 16px;
+  height: 100%;
 }
