--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,16 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+a {
+  color: #81fe88;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 27px */
+  text-decoration-line: underline;
+}
+
+a:visited {
+  color: #81fe88;
+}
